--- a/src/main/resources/view/DashboardForm.fxml
+++ b/src/main/resources/view/DashboardForm.fxml
@@ -33,5 +33,13 @@
             <Font name="System Bold" size="31.0" />
          </font>
       </JFXButton>
+      <JFXButton fx:id="orderDetailsBtn" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" focusTraversable="false" layoutX="70.0" layoutY="318.0" onAction="#orderDetailsBtnOnAction" prefHeight="61.0" prefWidth="225.0" style="-fx-background-color: lightblue;" text="Order Details" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
    </children>
 </AnchorPane>
